--- a/templates/annotate.html
+++ b/templates/annotate.html
@@ -1,6 +1,7 @@
-<!doctype html>
 
-{% if flag == 'locked' %}
+{% extends 'template.html' %}
+
+{% if label == 'locked' %}
     {% set locked_radio = 'checked' %}
     {% set non_locked_radio = '' %}
 {% else %}
@@ -8,40 +9,44 @@
     {% set non_locked_radio = 'checked' %}
 {% endif %}
 
-<html>
-<head>
-    <title>Image Annotation Tool</title>
-    <body>
+{% block content %}
+<p>
+    ファイル名: {{img}}
+    {% if label == None %}
+        (未アノテーション)
+    {% else %}
+        (アノテーション済)
+    {% endif %}
+
+</p>
+
+<div class="img-div">
+    <img src="/static/images/{{img}}"/>
+</div>
+
+<div class="form-div">
+    <form method="post" action="/annotate/{{id}}">
+        <input type="radio" name="locked" value="locked" {{locked_radio}}>locked
+        <input type="radio" name="locked" value="non-locked" {{non_locked_radio}}>non-locked
         <p>
-            {{img}}
+            <input type="submit" value="save" class='save-button'>
         </p>
-        
-        <p>
-            {% if flag == None %}
-                まだアノテーションされていない画像です。
-            {% else %}
-                アノテーション済みの画像です。
-            {% endif %}
-        </p>
-        
-        <form method="post" action="/save/{{id}}">
-            <input type="radio" name="locked" value="locked" {{locked_radio}}>locked
-            <input type="radio" name="locked" value="non-locked" {{non_locked_radio}}>non-locked
-            <p>
-                <input type="submit" value="save">
-            </p>
-        </form>
-        
-        <p>
-            <a href="/annotate/{{id-1}}">prev</a>
-        </p>
-            <a href="/annotate/{{id+1}}">next</a>
-        </p>
-        
-        <p>
-            <a href="/">home</a>
-        </p>
-        
-        
-    </body>
-</head>
+    </form>
+</div>
+
+
+<div class="prev-next-div">
+    <p>
+        <a href="/annotate/{{id-1}}">prev</a>
+    </p>
+    <p>　
+        <a href="/annotate/{{id+1}}">next</a>
+    </p>
+</div>
+
+<div class="home-div">
+    <p>
+        <a href="/">home</a>
+    </p>
+</div>
+{% endblock %}
