--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,34 @@
 @charset "utf-8";
 
+ul, li, p, div {
+    margin: 0;
+    padding: 0;
+}
+
 .container {
     width: 80vw;
     margin: 0 auto;
 }
 
+.message-div {
+    width: 80vw;
+}
+    
 .message-list {
     list-style: none;
+}
+
+.message {
+    color: white;
+    text-align: center;
+}
+
+.error {
+    background-color: red;
+}
+
+.success {
+    background-color: green;
 }
     
 tr.linked-tr {
