pagination and others

--- a/templates/annotate.html
+++ b/templates/annotate.html
@@ -29,7 +29,6 @@
     </form>
 </div>
 
-
 <div class="prev-next-div">
     <p>
         <a href="/annotate/{{index-1}}">prev</a>
@@ -41,7 +40,7 @@
 
 <div class="home-div">
     <p>
-        <a href="/">home</a>
+        <a href="/{{page_index}}">home</a>
     </p>
 </div>
 {% endblock %}
